--- a/patient-clinician-workshop/pccworkshop.tex
+++ b/patient-clinician-workshop/pccworkshop.tex
@@ -169,23 +169,23 @@ duration could easily indicate how much rest, exercise, and social
 exposure they might be getting.  Moreover, longitudinal records of the
 time(s) that a person gets up, eats, works, exercises and relaxes can
 be analysed for irregular behaviours or habits that might be affecting
-their well-being. For more specific conditions, daily
+his or her well-being. For more specific conditions, daily
 measurements of a person's blood pressure, blood oxidation, heart
 rate, breathing, weight, and galvanic skin response could be useful
 for tracking progress on a prescribed intervention, recovery from an
 illness, or onset of a new conditions, for example, or be used to
 pinpoint sources of prolonged stress.
 
-Merely providing access to such activity records back to individuals
-could have direct effects on people's behaviour, motivation and
-perceived well-being.  For example, just as asking individuals to
+Simply letting individuals see their own activity diaries could have
+direct effects on people's behaviour, motivation and perceived
+well-being, as well.  For example, just as asking individuals to
 introspect and justify their opinions and feelings has been found to
-be both disruptive and reinforcing of their opinions~\cite{wilson1989introspection},
-allowing people to reflect upon their
-historical records of their activities might help people realise or
+be both disruptive and reinforcing of their
+opinions~\cite{wilson1989introspection}, allowing people to reflect
+upon their historical activity records might help them realise or
 change their minds about how or why they feel particular ways. We feel
 that there is significant room for investigation here, and potential
-for research pertaining to self motivation and improvement.
+for research contributions pertaining to motivation and self-improvement.
 
 \marginpar{
 \begin{table}
