--- a/patient-clinician-workshop/pccworkshop.tex
+++ b/patient-clinician-workshop/pccworkshop.tex
@@ -146,13 +146,13 @@ low-resolution samples of a patient's condition.
 In this position paper, we look at the potential and problems of
 augmenting the next generation of EHRs with personal \emph{activity
   diaries}, portraits of a person's dynamic condition captured at high
-temporal fidelity.  Such activity diaries are intended to supplement,
-rather than supplant, the existing diagnostic reports performed by
-professionals, first and foremost, to help clinicians derive a more
-complete picture of the person throughout a period of care, such as an
-intervention.  We believe that such activity diaries could potentially
-also be beneficial to individuals as well, making people more aware of
-the evolution of their health.
+temporal fidelity.  Such activity diaries are intended, first and
+foremost, to supplement, rather than supplant the existing diagnostic
+reports performed by professionals, in order provide clinicians with a
+more complete picture of a patient's life throughout a period of care.
+We believe that such activity diaries could potentially also be
+beneficial to individuals as well, making people more aware of the
+evolution of their health.
 
 Nonetheless, challenges abound. These primarily pertain to capturing
 these activity diaries, effectively storing these diaries, giving
