--- a/patient-clinician-workshop/pccworkshop.bib
+++ b/patient-clinician-workshop/pccworkshop.bib
@@ -43,7 +43,7 @@
        booktitle = {PIM 2012},
            month = {January},
            title = {A decentralized architecture for consolidating personal information ecosystems: The WebBox},
-          author = {Max Van Kleek and Daniel Alexander Smith and Nigel Shadbolt and m.c. schraefel},
+          author = {Max Van Kleek and Daniel Alexander Smith and Nigel Shadbolt and Monica Schraefel},
             year = {2012},
             note = { Event Dates: 11 Feb 2012},
         keywords = {Personal Information Management, HCI, Human-Computer Interaction, Semantic Web, Linked Data, User experience, Web architecture},
