--- a/patient-clinician-workshop/pccworkshop.tex
+++ b/patient-clinician-workshop/pccworkshop.tex
@@ -8,7 +8,7 @@
   ACM 978-1-XXXX-XXXX-X/XX/XX.\\
 }
 
-\title{Using Distributed Information Stores for Patient-Clinician Health Data Sharing}
+\title{Using Personal Activity Diaries to Enhance Electronic Health Records}
 
 \numberofauthors{3}
 % Notice how author names are alternately typesetted to appear ordered in 2-column format;
@@ -47,7 +47,7 @@
 }
 
 % Paper metadata (use plain text, for PDF inclusion and later re-using, if desired)
-\def\plaintitle{Using Distributed Information Stores for Patient-Clinician Health Data Sharing}
+\def\plaintitle{Using Personal Activity Diaries to Enhance Electronic Health Records}
 \def\plainauthor{Daniel A. Smith, Max Van Kleek, Nigel R. Shadbolt}
 \def\plainkeywords{personal data, patient care, healthcare, information stores}
 \def\plaingeneralterms{Personal Data, Patient Care, Healthcare, Information Stores}
