--- a/patient-clinician-workshop/pccworkshop.bib
+++ b/patient-clinician-workshop/pccworkshop.bib
@@ -35,8 +35,8 @@
 @article{wilson1989introspection,
   title={Introspection, attitude change, and attitude-behavior consistency: The disruptive effects of explaining why we feel the way we do.},
   author={Wilson, T.D. and Dunn, D.S. and Kraft, D. and Lisle, D.J.},
+  journal={Advances in Experimental Social Psychology},
   year={1989},
-  publisher={Academic Press}
 }
 
 @inproceedings{webbox,
@@ -45,9 +45,7 @@
            title = {A decentralized architecture for consolidating personal information ecosystems: The WebBox},
           author = {Max Van Kleek and Daniel Alexander Smith and Nigel Shadbolt and Monica Schraefel},
             year = {2012},
-            note = { Event Dates: 11 Feb 2012},
         keywords = {Personal Information Management, HCI, Human-Computer Interaction, Semantic Web, Linked Data, User experience, Web architecture},
              url = {http://eprints.soton.ac.uk/273200/},
-        abstract = {Most existing PIM tools either suffer from having data isolated by being siloed in an application or only interact with specific tools offered through specific services. The consequences are that what people can do with their own data becomes constrained by what services application developers afford. We propose a web-standards based architecture called WebBox to support easy maintenance and repurposing of one's own data for private, social or public publishing, collaboration and reuse. }
 }
 
