--- a/patient-clinician-workshop/pccworkshop.tex
+++ b/patient-clinician-workshop/pccworkshop.tex
@@ -78,7 +78,7 @@
 
 \begin{abstract}
 
-Existing approaches to electronic integrated health records have largely focused on centralised information architectures, where patient data is held in a single repository, and accessed over the internet. However, there are a number of benefits to both patients and clinicians in a decentralised information approach to health records.
+Existing approaches to electronic integrated health records have largely focused on centralised information architectures, where patient data is held in a single repository, and accessed over the internet. Many patients are wearing personal sensors that report high-frequency and high-resolution data about their lifestyle, which could benefit patients and clinicians when taken in clinical context. We present an architecture that enables electronic health records to be augmented with activity diaries from personal sensors, and shared between patients and clinicians, to enhance communication and understanding about a patient's condition and how lifestyle changes can improve their situation.
 
 \end{abstract}
 
