--- a/patient-clinician-workshop/pccworkshop.tex
+++ b/patient-clinician-workshop/pccworkshop.tex
@@ -78,7 +78,11 @@
 
 \begin{abstract}
 
-Existing approaches to electronic integrated health records have largely focused on centralised information architectures, where patient data is held in a single repository, and accessed over the internet. Many patients are wearing personal sensors that report high-frequency and high-resolution data about their lifestyle, which could benefit patients and clinicians when taken in clinical context. We present an architecture that enables electronic health records to be augmented with activity diaries from personal sensors, and shared between patients and clinicians, to enhance communication and understanding about a patient's condition and how lifestyle changes can improve their situation.
+% Existing approaches to electronic integrated health records have largely focused on centralised information architectures, where patient data is held in a single repository, and accessed over the internet. 
+
+%Many patients are wearing personal sensors that report high-frequency and high-resolution data about their lifestyle, which could benefit patients and clinicians when taken in clinical context. 
+
+We posit that significant gains in patient-clinician communications could be made by helping clinicians better understand the patient's life between visits to the doctor's.  In this paper, we present an architecture for enabling electronic health records to be augmented with \emph{personal activity diaries}, logs of a patient's day-to-day life that are derived automatically from consolidated readings from personal activity sensors.  These activity diaries establish a shared context by which a patient and his or her clinician can discuss his or her lifestyle and condition.
 
 \end{abstract}
 
