--- a/patient-clinician-workshop/pccworkshop.tex
+++ b/patient-clinician-workshop/pccworkshop.tex
@@ -82,7 +82,7 @@
 
 %Many patients are wearing personal sensors that report high-frequency and high-resolution data about their lifestyle, which could benefit patients and clinicians when taken in clinical context. 
 
-We posit that significant gains in patient-clinician communications could be made by helping clinicians better understand the patient's life between visits to the doctor's.  In this paper, we present an architecture for enabling electronic health records to be augmented with \emph{personal activity diaries}, logs of a patient's day-to-day life that are derived automatically from consolidated readings from personal activity sensors.  These activity diaries establish a shared context by which a patient and his or her clinician can discuss his or her lifestyle and condition.
+We posit that significant gains in patient-clinician communications can be made by helping clinicians to better understand a patient's life between their visits to the doctor.  In this paper, we present an architecture for enabling electronic health records to be augmented with \emph{personal activity diaries}, high resolution records of a patient's daily life, derived automatically from personal activity sensors.  These activity diaries establish a shared context between the patient and clinician for discussing the patient's lifestyle and condition.
 
 \end{abstract}
 
