--- a/patient-clinician-workshop/pccworkshop.bib
+++ b/patient-clinician-workshop/pccworkshop.bib
@@ -10,14 +10,14 @@
 @inproceedings{stearns2001snomed,
   title={SNOMED clinical terms: overview of the development process and project status.},
   author={Stearns, M.Q. and Price, C. and Spackman, K.A. and Wang, A.Y.},
-  booktitle={Proceedings of the AMIA Symposium},
+  booktitle={AMIA Symposium},
   pages={662},
   year={2001},
   organization={American Medical Informatics Association}
 }
 
 @book{world1993icd,
-  title={The ICD-10 classification of mental and behavioural disorders: diagnostic criteria for research},
+  title={The ICD-10 classification of mental and behavioural disorders},
   year={1993},
   publisher={World Health Organization}
 }
@@ -25,7 +25,7 @@
 @article{hayrinen2008definition,
   title={Definition, structure, content, use and impacts of electronic health records: a review of the research literature.},
   author={H{\"a}yrinen, K. and Saranto, K. and Nyk{\"a}nen, P. and others},
-  journal={International journal of medical informatics},
+  journal={Int, j. med. inform.},
   volume={77},
   number={5},
   pages={291},
@@ -41,7 +41,6 @@
 
 @inproceedings{webbox,
        booktitle = {PIM 2012},
-           month = {January},
            title = {A decentralized architecture for consolidating personal information ecosystems: The WebBox},
           author = {Max Van Kleek and Daniel Alexander Smith and Nigel Shadbolt and Monica Schraefel},
             year = {2012},
