Updated copyright notice of PCC workshop paper, submitted to workshop organisers.

--- a/patient-clinician-workshop/pccworkshop.tex
+++ b/patient-clinician-workshop/pccworkshop.tex
@@ -4,8 +4,8 @@
 
 \copyrightinfo{
   Copyright is held by the author/owner(s).\\
-  \emph{CHI'13}, April 27 -- May 2, 2013, Paris, France.\\
-  ACM 978-1-XXXX-XXXX-X/XX/XX.\\
+  \emph{ACM CHI 2013}, April 28, 2013, Paris, France.\\
+%  ACM 978-1-XXXX-XXXX-X/XX/XX.\\
 }
 
 \title{Using Personal Activity Diaries to Enhance Electronic Health Records}
